# thesis_jetson

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  package.xml  requirement.md  terminal.launch  thesis.launch
bytetrack/include/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h  logging.h
bytetrack/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
cmake/: FindCUDAConfig.cmake  FindOpenCVConfig.cmake  FindTensorRTConfig.cmake
include/: Detect.h  EgoVehicle.h  FrontDistanceEstimator.h  LaneDetector.h  Logger.h  TrafficSignStabilizer.hpp  app.h  config.h  cuda_utils.h  cxxopts.hpp  logging.h  macros.h  preprocess.h  process.h  utils.hpp
include/common/: common.h  cuda_utils.h
include/followdist/: FrontDistanceEstimator.cpp  FrontDistanceEstimator.h
include/lanevision/: LaneDetector.cpp  LaneDetector.h
include/modules/: DataLogger.h  EnhancedVideoSubscriber.h  HUDRenderer.h  VideoRecorder.h
include/tensorrt/: logging.h
src/: Detect.cpp  Detect.h  EgoVehicle.cpp  FrontDistanceEstimator.cpp  LaneDetector.cpp  config.cpp  echo_brake.cpp  echo_driving_action.cpp  echo_ego_speed.cpp  echo_throttle.cpp  main.cpp  preprocess.cu  preprocess.h  process.cpp  utils.cpp  video_publisher.cpp  video_subscriber.cpp  video_subscriber_capture.cpp  video_subscriber_test.cpp
src/modules/: DataLogger.cpp  EnhancedVideoSubscriber.cpp  HUDRenderer.cpp  VideoRecorder.cpp
